# linkedin-clone-web3

./: README.md
backend/: .env  docker-compose.yaml  ingress.conf  readme.md
backend/api/: .env  Dockerfile  package-lock.json  package.json
chain/: Cargo.toml  README.md  contract_address.json  contract_usage.txt
chain/artifacts/: checksums.txt  checksums_intermediate.txt  cw_nameservice.wasm
chain/schema/: cw-nameservice.json
chain/schema/raw/: execute.json  query.json  response_to_config.json  response_to_is_subscribed.json  response_to_list_credentials.json  response_to_resolve_user_info.json  response_to_verify_credential.json
chain/src/: contract.rs  msg.rs  state.rs  tests.rs
chain/ts/: MyProject.client.ts  MyProject.types.ts
frontend/: .env.development  deploy.sh  env.local  next.config.js  package.json
frontend/components/: Layout.tsx  Nav.tsx  WalletLoader.tsx  profile.tsx  updatableProfile.tsx
frontend/constants/: constants.ts
frontend/contexts/: client.tsx
frontend/contracts/: MyProject.client.ts  MyProject.types.ts
frontend/hooks/: client.tsx
frontend/pages/: _app.tsx  _document.tsx  blockedin.tsx  education.tsx  employment.tsx  event.tsx  hackathon.tsx  hackaton.tsx  index.tsx  nft.tsx  profile.tsx  send.tsx  styles.css  university.tsx
frontend/services/: BackendService.tsx  backendService.ts  keplr.tsx
frontend/styles/: daisyui-themes.json  globals.css
vc-payloads/: verifiableDegree.json  verifiableEmployment.json  verifiableEvent.json
vc-templates/: GenericAsset.json  VerifiableEmployment.json  VerifiableEvent.json
(+14 files in other folders)
